## 0.1.0 / 2018-09-22

* [FEATURE] Add LoggerFunc, helper to create a Loggers without a new type.
* [FEATURE] Add dummy implementation.
* [FEATURE] Add noglog Logger interface and internal implementation.