@@ -1,3 +1,7 @@
+## 0.x.x / 2018-xx-xx
+
+* [FEATURE] Simplify API by removing `DebugEnabled` method.
+
 ## 0.1.0 / 2018-09-22
 
 * [FEATURE] Add LoggerFunc, helper to create a Loggers without a new type.
